# StatusPage

./: README.md  setup.cfg  status.py
static/: styles.css
templates/: status.html  update.html
