[metadata]
name = StatusPage
version = 0.0.1
description = An ironic status page that works though.
long_description = file: README.md
long_description_content_type = text/markdown
author = DigiDuncan
author_email = digiduncan@gmail.com
license = GPL-3
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
keywords = webpage
project_urls =
    Source=https://github.com/DigiDuncan/StatusPage
    Tracker=https://github.com/DigiDuncan/StatusPage/issues

[options]
packages = find:
python_requires = >=3.8
zip_safe = yes
install_requires =
    flask==1.1.2
    arrow==0.15.8

[options.extras_require]
dev =
    autopep8==1.4.4
    flake8==3.7.9
    pytest==5.3.1

[flake8]
ignore = E241,E251,E501,W503
